# native-os

./: .gitignore  .replit  LICENSE  README.md  bootstrap.sh  clean_history.sh  cleanup.txt  install.sh  pyproject.toml  replacements.txt  update_native_os.txt
agents/: ansible-agent.py  code-agent.py  doc-agent.py  docker-agent.py  infra-agent.py  infra_dsl.py  k8s-agent.py  terraform-agent.py
attached_assets/: Pasted-Absolutely-Let-s-expand-Native-OS-to-include-the-AI-Orchestrated-DevOps-Infrastructure-Cont-1742805503319.txt  Pasted-Here-are-precise-structured-prompts-you-can-copy-into-your-Replit-AI-Agent-step-by-step-t-1742797366010.txt
cli/: devctl
evolver/: self_optimize.py
memory/: init_memory.py  memory_query.py
output/docs/: help_me_understand_20250324_071757.md  help_me_understand_20250324_072718.md  help_me_understand_20250324_073004.md  help_me_understand_20250324_073130.md  help_me_understand_20250324_073514.md  help_me_understand_20250324_073552.md  help_me_understand_20250324_073946.md  help_me_understand_20250324_074510.md
output/generated_20250324_073045/: hello.py
ui/tauri-app/: main.ts
ui/tauri-app/src/: App.jsx
