[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "chromadb>=0.6.3",
    "deepseek-ai>=0.0.1",
    "langchain>=0.3.21",
    "openai>=1.68.2",
    "requests>=2.32.3",
    "rich>=13.9.4",
]
