[project]
name = "native-os"
version = "0.1.0"
description = "A modular, AI-native Linux development platform with intelligent system optimization"
authors = [
    {name = "hxcode ai", email = "info@hxcode.ai"}
]
license = {text = "Proprietary"}
requires-python = ">=3.8"
dependencies = [
    "anthropic>=0.49.0",
    "chromadb>=0.6.3",
    "deepseek-ai>=0.0.1",
    "langchain>=0.3.21",
    "openai>=1.68.2",
    "requests>=2.32.3",
    "rich>=13.9.4",
]
